// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoListComponent should render a list 1`] = `
<div
  id="root4"
>
  <div
    class="flex-wrapper"
  >
    
    
    <todoapp-todo-item />
    
    <todoapp-todo-item />
    
    
  </div>
  
</div>
`;

exports[`TodoListComponent should render an empty list 1`] = `
<div
  id="root3"
>
  <div
    class="flex-wrapper"
  >
    <p>
      Good job!
    </p>
    <p>
      You have no pending stuff to do!
    </p>
    
    
  </div>
  
</div>
`;
